--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ayinde sodiq</title>
-    <script src=""></script>
   </head>
 
   <body>
@@ -16,6 +15,7 @@
     </noscript> -->
 
     <header>
+
       <img src="./assets/logo1.png" class="logo" />
       <div class="navbar" id="navbar">
         <a href="#" id="toHome" to="home">
@@ -111,7 +111,7 @@
       </a>
     </div>
 
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
 
     <script src="./app.js"></script>
   </body>
