--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
       </a>
     </div>
 
-    <!-- <div id="app"></div> -->
+    <div id="app"></div>
 
     <script src="./app.js"></script>
   </body>
