added some animation

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,16 @@
     </noscript> -->
 
     <header>
-
-      <img src="./assets/logo1.png" class="logo" />
+      <div class="logo-box">
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.67 241.23" width="50px">
+          <g id="logo">
+            <path
+              class="a-out"
+              d="M304.46,277.37H244.93L179.28,95.59c-.37-1.86-1.8-2.79-4.27-2.79s-4.33.93-5.19,2.79L105.47,277.37H45.19q7.05-22.29,22.07-67,16.88-49.62,33-94.72,17.81-49.27,21.89-55.19,7.59-9.93,21.79-15.15a93.48,93.48,0,0,1,61.66,0q14.28,5.22,21.52,15.15,4.63,5.74,22.25,55Q261.8,150.09,282,210.16,293.15,243.76,304.46,277.37Z"
+            />
+          </g>
+      </svg> -->
+      </div>
       <div class="navbar" id="navbar">
         <a href="#" id="toHome" to="home">
           <i class="fas fa-home"></i>
