--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,48 @@
 
     <header>
       <div class="logo-box">
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.67 241.23" width="50px">
-          <g id="logo">
-            <path
-              class="a-out"
-              d="M304.46,277.37H244.93L179.28,95.59c-.37-1.86-1.8-2.79-4.27-2.79s-4.33.93-5.19,2.79L105.47,277.37H45.19q7.05-22.29,22.07-67,16.88-49.62,33-94.72,17.81-49.27,21.89-55.19,7.59-9.93,21.79-15.15a93.48,93.48,0,0,1,61.66,0q14.28,5.22,21.52,15.15,4.63,5.74,22.25,55Q261.8,150.09,282,210.16,293.15,243.76,304.46,277.37Z"
-            />
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 340.07 340.34" width="40px">
+          <defs>
+            <style>
+              .cls-1 {
+                fill: #ffffff;
+                stroke: #000;
+                stroke-width: 1.5px;
+                stroke-miterlimit: 10;
+              }
+              .cls-2 {
+                fill: #4d4d4d;
+              }
+              .cls-3 {
+                fill: #f7931e;
+              }
+            </style>
+          </defs>
+          <g id="Layer_2" data-name="Layer 2">
+            <g id="Layer_1-2" data-name="Layer 1">
+              <path
+                class="cls-1"
+                d="M338.55,199.41C330.94,149.21,275,57.22,237,23.54c-16.55-14.66-42.73-13.48-66.25-13.48s-49.69-1.18-66.24,13.48C66.54,57.22,10.6,149.21,3,199.41-4.51,249,31.15,302.87,76.09,319.06c44.54,16.05,144.11,13.89,189.37,0C311.12,305.05,346.06,249,338.55,199.41Z"
+              />
+              <path
+                class="cls-1"
+                d="M257.77,11.69c-49-13.26-155.74.85-201.86,22.05-20.1,9.24-29.56,33.67-39,55.19S-4.24,133.93,2.51,155c15.51,48.34,77.16,136.61,120,163.8,42.32,26.84,106,15.93,139-18.67,32.64-34.29,70.8-126.29,76.33-173.31C343.4,79.37,306.14,24.79,257.77,11.69Z"
+              />
+              <path
+                class="cls-1"
+                d="M28.84,67.71c-19.41,46.91-19,154.57-3.88,203,6.6,21.11,29.63,33.61,49.76,45.76s41.94,26.68,63.69,22.66C188.34,330,283.74,280.06,316.18,241c32-38.54,29.33-103.13-.79-140.21C285.54,64.05,199.15,14.47,153.22,3,106.88-8.59,48,21.41,28.84,67.71Z"
+              />
+              <path
+                class="cls-2"
+                d="M296.19,267H236.66L171,85.23q-.56-2.79-4.27-2.79c-2.59,0-4.33.93-5.19,2.79L97.2,267H36.92Q44,244.72,59,200q16.87-49.62,33-94.72Q109.81,56,113.89,50.06q7.6-9.93,21.79-15.15a93.48,93.48,0,0,1,61.66,0q14.28,5.22,21.52,15.15,4.63,5.74,22.25,55,12.42,34.65,32.64,94.72Q284.88,233.4,296.19,267Z"
+              />
+              <path
+                class="cls-3"
+                d="M304.46,277.37H244.93L179.28,95.59c-.37-1.86-1.8-2.79-4.27-2.79s-4.33.93-5.19,2.79L105.47,277.37H45.19q7.05-22.29,22.07-67,16.88-49.62,33-94.72,17.81-49.27,21.89-55.19,7.59-9.93,21.79-15.15a93.48,93.48,0,0,1,61.66,0q14.28,5.22,21.52,15.15,4.63,5.74,22.25,55Q261.8,150.09,282,210.16,293.15,243.76,304.46,277.37Z"
+              />
+            </g>
           </g>
-      </svg> -->
+        </svg>
       </div>
       <div class="navbar" id="navbar">
         <a href="#" id="toHome" to="home">
@@ -69,9 +103,7 @@
 
     <div class="contents">
       <div class="body">
-        <div id="root">
-
-        </div>
+        <div id="root"></div>
       </div>
     </div>
 
